[gd_scene load_steps=4 format=2]

[ext_resource path="res://Character/jamesskin11.tscn" type="PackedScene" id=1]
[ext_resource path="res://Character/Character.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36.25, 60.75 )

[node name="Character" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.75, 14.25 )
shape = SubResource( 1 )

[node name="InvulnerabilityTimer" type="Timer" parent="."]

[node name="JerrySkin" parent="." instance=ExtResource( 1 )]
position = Vector2( 8, -10 )
scale = Vector2( 0.25, 0.25 )

[connection signal="hurt" from="." to="JerrySkin" method="_on_Character_hurt"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]
